--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -7,6 +7,7 @@
     android:padding="16dp"
     android:textColor="#000000"
     android:textSize="17sp"
+    android:background="?attr/selectableItemBackground"
     android:layout_width="match_parent"
     android:layout_height="wrap_content" />
 </LinearLayout>
