http工具类开发完成

--- a/app/src/main/res/layout/activity_http_test.xml
+++ b/app/src/main/res/layout/activity_http_test.xml
@@ -4,15 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.jianyuyouhun.jmvp.activitys.MainActivity">
-    <Button
-        android:id="@+id/adapter_test"
-        android:text="适配器测试"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+    tools:context="com.jianyuyouhun.jmvp.activitys.HttpTestActivity">
     <Button
         android:id="@+id/http_test"
         android:text="http测试"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <WebView
+        android:id="@+id/webView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
