增加动态权限处理

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,4 +15,9 @@
         android:text="http测试"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/permission_test"
+        android:text="动态权限测试"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
