--- a/app/src/main/res/layout/activity_image_load_test.xml
+++ b/app/src/main/res/layout/activity_image_load_test.xml
@@ -7,5 +7,11 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="150dp" />
+        android:layout_height="220dp" />
+
+    <com.jianyuyouhun.library.AutoBannerView
+        android:layout_marginTop="12dp"
+        android:id="@+id/autobanner"
+        android:layout_width="match_parent"
+        android:layout_height="220dp"/>
 </LinearLayout>
