--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,4 +30,9 @@
         android:text="登录测试"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/support_test"
+        android:text="support design测试"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
