动态权限请求体增加版本RequiresApi注解

--- a/app/src/main/res/layout/activity_permission_test.xml
+++ b/app/src/main/res/layout/activity_permission_test.xml
@@ -19,4 +19,9 @@
         android:text="相机"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/tips"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"/>
 </LinearLayout>
