--- a/app/src/main/res/layout/activity_http_test.xml
+++ b/app/src/main/res/layout/activity_http_test.xml
@@ -1,17 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.jianyuyouhun.jmvp.activitys.HttpTestActivity">
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              tools:context="com.jianyuyouhun.jmvp.activitys.HttpTestActivity">
+
+    <EditText
+        android:id="@+id/http_url_input"
+        android:hint="请输入url"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
     <Button
-        android:id="@+id/http_test"
-        android:text="http测试"
+        android:id="@+id/http_get"
+        android:text="get"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-    <WebView
-        android:id="@+id/webView"
+    <Button
+        android:id="@+id/http_post"
+        android:text="post"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/result"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
