--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <Button
-        android:id="@+id/http_test"
+        android:id="@+id/http_get"
         android:text="http测试"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
