--- a/app/src/main/res/layout/activity_image_load_test.xml
+++ b/app/src/main/res/layout/activity_image_load_test.xml
@@ -1,19 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <ImageView
+    <com.jianyuyouhun.jmvplib.view.CircleImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="220dp" />
+        android:layout_height="220dp"
+        android:layout_marginTop="12dp"
+        app:civ_border_color="@color/colorAccent"
+        app:civ_border_overlay="false"
+        app:civ_border_width="1dp"
+        app:civ_fill_color="@color/colorPrimary"
+        app:civ_shape_style="circle"/>
 
     <com.jianyuyouhun.library.AutoBannerView
-        android:layout_marginTop="12dp"
         android:id="@+id/autobanner"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        app:dotMargin="5dp"
         android:layout_width="match_parent"
-        android:layout_height="220dp"/>
+        android:layout_height="220dp"
+        android:layout_marginTop="12dp"
+        app:dotMargin="2dp"
+        app:dotGravity="right"/>
 </LinearLayout>
