--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content" />
     <Button
         android:id="@+id/dialog_test"
-        android:text="dialog测试"
+        android:text="dialog键盘测试"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </LinearLayout>
