--- a/app/src/main/res/layout/dialog_auto_scroll_layout.xml
+++ b/app/src/main/res/layout/dialog_auto_scroll_layout.xml
@@ -3,9 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/all_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:fitsSystemWindows="true">
+    android:layout_height="match_parent">
 
     <View
         android:id="@+id/dialog_background_view"
