--- a/app/src/main/res/layout/dialog_auto_scroll_layout.xml
+++ b/app/src/main/res/layout/dialog_auto_scroll_layout.xml
@@ -37,7 +37,7 @@
                     android:layout_marginBottom="18dp"
                     android:layout_marginTop="1dp"
                     android:gravity="center"
-                    android:text="select_transfer_doctor_dialog_title"
+                    android:text="标题"
                     android:textColor="#000000"
                     android:textSize="18sp" />
 
@@ -47,7 +47,7 @@
                     android:layout_gravity="center"
                     android:layout_marginBottom="11dp"
                     android:layout_marginTop="7dp"
-                    android:text="select_transfer_doctor_dialog_desc"
+                    android:text="提示文案"
                     android:textColor="#5f5f5f"
                     android:textSize="16sp" />
 
@@ -57,7 +57,7 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/bg_dialog_edittext"
                     android:gravity="start|top"
-                    android:hint="select_transfer_doctor_dialog_input_hint"
+                    android:hint="输入内容"
                     android:textColorHint="#cccccc"
                     android:imeOptions="actionDone"
                     android:inputType="textMultiLine"
@@ -85,7 +85,7 @@
                     android:gravity="center"
                     android:paddingBottom="11dp"
                     android:paddingTop="11dp"
-                    android:text="cancel"
+                    android:text="取消"
                     android:textColor="#5f5f5f"
                     android:textSize="17sp" />
 
@@ -102,7 +102,7 @@
                     android:gravity="center"
                     android:paddingBottom="11dp"
                     android:paddingTop="11dp"
-                    android:text="ok"
+                    android:text="确认"
                     android:textColor="#1B81FE"
                     android:textSize="17sp" />
             </LinearLayout>
