增加一些控件的搜集。

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,4 +35,9 @@
         android:text="dialog键盘测试"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/animator_view_test"
+        android:text="动效控件测试"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
