--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,12 @@
     <color name="colorAccent">#FF4081</color>
     <color name="line">#DEDEDE</color>
     <color name="transparent">#00000000</color>
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
+    <color name="red">#ff0000</color>
+    <color name="green">#00ff00</color>
+    <color name="blue">#0000ff</color>
+    <color name="yellow">#eeee00</color>
+    <color name="orange">#ff8800</color>
+    <color name="blueness">#09cc9f</color>
 </resources>
