修改BaseFragmentPagerAdapter，改用反射获取makeFragmentName方法

--- a/app/src/main/res/layout/activity_adapter_test.xml
+++ b/app/src/main/res/layout/activity_adapter_test.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.jianyuyouhun.jmvp.activitys.AdapterTestActivity">
+    tools:context=".ui.activitys.AdapterTestActivity">
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
