--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
         <Button
             android:id="@+id/adapter_test"
             android:layout_width="match_parent"
@@ -59,5 +58,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="ViewPager测试"/>
+        <Button
+            android:id="@+id/hangup_test"
+            android:text="横幅测试"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
     </LinearLayout>
 </com.jianyuyouhun.jmvplib.view.TouchEnableChildLayout>
