--- a/app/src/main/res/layout/activity_animator_view_collect.xml
+++ b/app/src/main/res/layout/activity_animator_view_collect.xml
@@ -55,4 +55,14 @@
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
     </com.jianyuyouhun.jmvplib.view.ShadowLayout>
+
+    <Button
+        android:id="@+id/search_btn"
+        android:text="查询"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/search_result"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
