--- a/app/src/main/res/layout/activity_animator_view_collect.xml
+++ b/app/src/main/res/layout/activity_animator_view_collect.xml
@@ -58,9 +58,10 @@
 
     <Button
         android:id="@+id/search_btn"
-        android:text="查询"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:text="查询"/>
+
     <TextView
         android:id="@+id/search_result"
         android:layout_width="wrap_content"
