--- a/app/src/main/res/layout/activity_permission_test.xml
+++ b/app/src/main/res/layout/activity_permission_test.xml
@@ -4,6 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="10dp">
+
+    <TextView
+        android:id="@+id/permission_test"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="12dp"
+        android:transitionName="a"
+        android:text="动态权限测试"/>
+
     <Button
         android:id="@+id/storage"
         android:text="存储"
