--- a/app/src/main/res/layout/activity_animator_view_collect.xml
+++ b/app/src/main/res/layout/activity_animator_view_collect.xml
@@ -47,13 +47,13 @@
         app:mSlShadowColor="@color/shadow"
         app:mSlShadowRadius="1dp">
 
-       <TextView
-           android:padding="16dp"
-           android:background="@color/white"
-           android:id="@+id/hangup_btn"
-           android:text="横幅测试"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/hangup_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:padding="16dp"
+            android:text="横幅测试"/>
     </com.jianyuyouhun.jmvplib.view.ShadowLayout>
 
     <Button
